tests/snapshots/regression/recovery__missing_commas_then_continue.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/missing_commas_then_continue.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 2 errors • tests/fixtures/recovery/missing_commas_then_continue.flx
error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/recovery/missing_commas_then_continue.flx:1:9
  |
1 | print(1 2 3);
  |         ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/recovery/missing_commas_then_continue.flx:1:11
  |
1 | print(1 2 3);
  |           ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.

Found 2 errors.
